post 1.3.5
==========

  * added a method to detect mimetypes of zipped files, 
    here specialy for OOo now all Openofice files and zip 
    files are detected properly.  my simple tests are working: 
    a OOo-Writer and a simpe zipfile are detected.
    [yenzenz]

  * updated freedesktop.org.xml file to latest CVS version rev 1.57 from
    http://cvs.freedesktop.org/mime/shared-mime-info/freedesktop.org.xml
    [yenzenz]

1.3.5-final03 - 2005-08-07
==========================

  * nothing - the odd version checking needs a version change to stick to 
    Archetypes version again.
    [yenzenz]

1.3.5-final02 - 2005-08-01
==========================

 * nothing again, need to stick to Archetypes version
   [yenzenz]


1.3.5-final - 2005-07-17
========================

  * Added Five/Zope3 interface bridges and implements
    [tiran]

1.3.4-final - 2005-07-06
========================

  * added icons for openoffice.org files
    [yenzenz]

1.3.3-final06 - 2005-05-20
==========================

  * nothing (I hate to write this. But the odd version checking needs it).
    [yenzenz]

1.3.3-final-02 - 2005-03-25
===========================

  * nothing

1.3.3-final - 2005-03-05
========================

 * More a workaround than a fix for [ 1056252 ] Content type algorithm
   can be confused.
   [tiran]

 * workaround for [ 1068001 ] BaseUnit Encoding Error: macintosh
   [yenzenz]

 * In the case all else fails, try to resort to guess_content_type so
   that at least we don't get 'text/plain' when the file is in fact a
   binary file.
   [dreamcatcher]

1.3.2-5 - 2004-09-30
====================

 * nothing

1.3.2-4 - 2004-09-30
====================

 * nothing

1.3.2-3 - 2004-09-25
====================

 * nothing

1.3.2-2 - 2004-09-17
====================

 * nothing

1.3.2-1 - 2004-09-04
====================

 * Cleaned up major parts of PT by removing the python only implementation which
   was broken anyway
   [tiran]

1.3.1-1 - 2004-08-16
====================
