@@ -1,6 +1,11 @@
 post 1.3.5
 ==========
 
+  * after one night sleeping over it I removed the yesterday added method.
+    therefore I added according to some heuristics and OOo-Documentation
+    some magic bytes to magic.py and made better tests.
+    [yenzenz]
+
   * added a method to detect mimetypes of zipped files, 
     here specialy for OOo now all Openofice files and zip 
     files are detected properly.  my simple tests are working: 
